--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "@edx/typescript-config",
     "compilerOptions": {
+      "jsx": "react",
       "outDir": "dist",
       "baseUrl": "./src",
       "paths": {
