--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@openedx/paragon": "^22.8.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "1.9.7",
+    "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/react-query": "4.36.1",
     "@tinymce/tinymce-react": "^3.14.0",
     "classnames": "2.5.1",
@@ -84,6 +85,7 @@
     "moment": "2.30.1",
     "moment-shortformat": "^2.1.0",
     "npm": "^10.8.1",
+    "postcss": "^8.5.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-datepicker": "^4.13.0",
@@ -103,6 +105,7 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "start": "^5.1.0",
+    "tailwindcss": "^4.1.7",
     "tinymce": "^5.10.4",
     "universal-cookie": "^4.0.4",
     "uuid": "^3.4.0",
