--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "@openedx/paragon": "^22.8.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "1.9.7",
-    "@tailwindcss/cli": "^4.1.7",
     "@tanstack/react-query": "4.36.1",
     "@tinymce/tinymce-react": "^3.14.0",
     "classnames": "2.5.1",
@@ -104,7 +103,6 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "start": "^5.1.0",
-    "tailwindcss": "^4.1.7",
     "tinymce": "^5.10.4",
     "universal-cookie": "^4.0.4",
     "uuid": "^3.4.0",
@@ -120,13 +118,16 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^13.2.1",
     "@types/lodash": "^4.17.7",
+    "autoprefixer": "^10.4.21",
     "axios-mock-adapter": "1.22.0",
     "eslint-import-resolver-webpack": "^0.13.8",
     "fetch-mock-jest": "^1.5.1",
     "husky": "7.0.4",
     "jest-canvas-mock": "^2.5.2",
     "jest-expect-message": "^1.1.3",
+    "postcss": "^8.5.3",
     "react-test-renderer": "17.0.2",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "tailwindcss": "^3.4.17"
   }
 }
