--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@openedx/frontend-build": "^14.0.14",
     "@openedx/frontend-plugin-framework": "^1.2.1",
     "@openedx/paragon": "^22.8.1",
+    "@react-spring/web": "^10.0.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "1.9.7",
     "@tanstack/react-query": "4.36.1",
@@ -90,6 +91,7 @@
     "react-dom": "17.0.2",
     "react-error-boundary": "^4.0.13",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-onclickoutside": "^6.13.0",
     "react-redux": "7.2.9",
     "react-responsive": "9.0.2",
@@ -103,6 +105,7 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "start": "^5.1.0",
+    "tailwindcss-animated": "^2.0.0",
     "tinymce": "^5.10.4",
     "universal-cookie": "^4.0.4",
     "uuid": "^3.4.0",
