--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "@reduxjs/toolkit": "1.9.7",
     "@tanstack/react-query": "4.36.1",
     "@tinymce/tinymce-react": "^3.14.0",
+    "ag-grid-react": "^34.1.2",
+    "antd": "^5.27.1",
     "classnames": "2.5.1",
     "codemirror": "^6.0.0",
     "email-validator": "2.0.4",
@@ -109,6 +111,7 @@
     "tinymce": "^5.10.4",
     "universal-cookie": "^4.0.4",
     "uuid": "^3.4.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "xmlchecker": "^0.1.0",
     "yup": "0.31.1"
   },
