--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "npm": "^10.8.1",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-confetti": "^6.4.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-datepicker": "^4.13.0",
     "react-dom": "17.0.2",
     "react-error-boundary": "^4.0.13",
