--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "file-saver": "^2.0.5",
     "formik": "2.4.6",
     "frontend-components-tinymce-advanced-plugins": "^1.0.3",
+    "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "lodash": "4.17.21",
     "meilisearch": "^0.41.0",
@@ -89,6 +90,7 @@
     "npm": "^10.8.1",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-confetti-boom": "^2.0.1",
     "react-countdown-circle-timer": "^3.2.1",
     "react-datepicker": "^4.13.0",
     "react-dom": "17.0.2",
