--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "moment-shortformat": "^2.1.0",
     "npm": "^10.8.1",
     "prop-types": "^15.8.1",
+    "qs": "^6.14.0",
     "react": "17.0.2",
     "react-confetti-boom": "^2.0.1",
     "react-countdown-circle-timer": "^3.2.1",
@@ -109,12 +110,13 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
+    "socket.io-client": "^4.8.1",
     "start": "^5.1.0",
     "tailwindcss-animated": "^2.0.0",
     "tinymce": "^5.10.4",
     "universal-cookie": "^4.0.4",
     "uuid": "^3.4.0",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
+    "xlsx-js-style": "^1.2.0",
     "xmlchecker": "^0.1.0",
     "yup": "0.31.1"
   },
