--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@openedx/frontend-build": "^14.0.14",
     "@openedx/frontend-plugin-framework": "^1.2.1",
     "@openedx/paragon": "^22.8.1",
+    "@react-pdf/renderer": "^4.3.1",
     "@react-spring/web": "^10.0.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "1.9.7",
